# syspulse

./: README.md  pyproject.toml
syspulse/: __init__.py  cli.py  collector.py  formatter.py  install.sh
syspulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
